--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,8 @@
             <!-- place navbar here -->
         </header>
         <main> <h1>
-            Sistema EasyKcal
+
+            SISTEMA EASYKCAL
         </h1></main>
         <footer>
             <!-- place footer here -->
